--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/support": "5.*|^6|^7|^8"
+    "illuminate/support": "^6 || ^7 || ^8 || ^9 || ^10 || ^11 || ^12"
   },
   "autoload": {
     "psr-0": {
